syntax = "proto3";

package pb;

service Authentication {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Verify(VerifyRequest) returns (VerifyResponse) {}
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    uint32 id = 1;
    string error = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string error = 2;
}

message VerifyRequest {
    string token = 1;
}

message VerifyResponse {
    uint32 id = 1;
    string error = 2;
}
